--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,9 @@
     "tests"
   ],
   "dependencies": {
-	  "jquery": "~1.11.3",
-	  "bootstrap":"~3.3.6",
-    "knockout": "~3.4.0"
-	
+    "jquery": "~1.11.3",
+    "bootstrap": "~3.3.6",
+    "knockout": "~3.4.0",
+    "jwplayer": "bianjp/jwplayer#^7.2.4"
   }
 }
